<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">多聚浏览器</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="tools">工具</string>


	<string name="stg_require">Please grant storage permission.</string>
	<string name="stg_statement">This app cannot work without storage permission.</string>
	<string name="stg_grantnow">Grant now</string>
	<string name="trialin">Trial…… #</string>
	<string name="stgerr_fail">Sorry, but cannot use this app on you device.</string>

    <string name="lorem"><![CDATA[<html>Lorem <b>ipsum dolor</b> sit amet, consectetur adipiscing elit. <a href="http://www.google.com">In sed massa diam</a>. Integer leo tortor, sagittis eget blandit et, malesuada id odio. Proin gravida dui imperdiet, tempor augue eu, euismod odio. Vivamus nec euismod neque. Nam sed turpis ac arcu consectetur tristique sed et odio. Vivamus posuere aliquet mi vitae bibendum. Suspendisse potenti. Morbi mattis sed nisl sit amet tristique. Nunc mattis porta sem, nec eleifend metus pellentesque non. Mauris tincidunt justo eu magna bibendum feugiat. Suspendisse semper risus dui, non ullamcorper metus scelerisque eu. Proin suscipit nisi non arcu egestas, in adipiscing neque pharetra. Praesent ullamcorper hendrerit enim. Donec in est eget ligula fringilla dictum. Maecenas sodales sem in lacus imperdiet convallis.

Vestibulum urna mi, eleifend vel massa ut, facilisis lacinia lacus. Mauris sodales dolor eu ligula placerat, et interdum lectus mattis. Nulla tempor hendrerit odio, et suscipit enim convallis in. Morbi vehicula risus lectus. Integer mattis, lacus tincidunt tristique egestas, orci lorem tristique dolor, quis aliquam sem arcu nec eros. Aenean dui est, adipiscing quis massa id, scelerisque euismod orci. Fusce in lacus id nisi hendrerit elementum. In nec lacus luctus, volutpat odio ut, ullamcorper enim. Pellentesque dapibus massa ut magna rutrum, in accumsan lorem feugiat. Vivamus luctus elit tellus.

Fusce sit amet tempus libero. Nunc feugiat dignissim purus vitae tempus. Nam adipiscing nulla ac urna congue, sed pulvinar lacus sagittis. Curabitur venenatis elit eget scelerisque ultrices. Ut porta magna pellentesque, convallis metus at, laoreet leo. Sed ac cursus mi. Maecenas mauris diam, luctus ac tortor aliquet, pretium laoreet odio. Nunc tincidunt a sem ut ornare. Donec suscipit tincidunt lacus, in consectetur neque facilisis eget.

Nullam imperdiet quam in dolor venenatis, sit amet venenatis nisi <b>eleifend</b>. Maecenas ligula lorem, egestas ut adipiscing in, gravida a est. Nam luctus massa in quam viverra, et suscipit nulla cursus. Ut ut vulputate enim. Mauris vulputate felis a quam varius sodales sit amet et augue. Proin sagittis mollis tempor. Curabitur nec quam in risus volutpat sagittis quis placerat sapien. Proin vulputate, ante vitae commodo auctor, quam nisi convallis lectus, eget sodales ligula arcu ac nulla. Praesent vulputate nec libero vel pulvinar.

Donec feugiat ac nunc vel laoreet. In laoreet pretium fringilla. Suspendisse potenti. Praesent nec justo sagittis, scelerisque sem in, <b>egestas</b> massa. Vestibulum sed massa quis velit vehicula hendrerit vitae eget dui. Ut fringilla, lectus eget tristique tristique, orci urna consequat ligula, vitae hendrerit ipsum dui non sem. Duis lacinia arcu at libero dignissim facilisis. Quisque in ullamcorper dui.</html>]]></string>
	<string name="ak_no_inst">未安装Anki笔记！</string>
	<string name="pd_no_inst">未安装平典！</string>
	<string name="gt_no_inst">未安装谷歌翻译！</string>
	<string name="share_link">分享链接：</string>
	<string name="highlight">高亮</string>
	<string name="global_vs_tabs">全局设定/标签设定</string>
	<string name="coef" translatable="false">&#160;×_ √_ --</string>
	<string name="qr_settings">扫码选项</string>
	<string name="plain_dict">平典</string>
	<string name="pls_pick_permission">please pick a sdcard to grant write permission. </string>

	<string name="pdf_internal_open">Use built-in manager to open PDFs</string>
	<string name="pdf_external_open">Use system manager to open PDFs</string>

	<string name="pdf_create_shortcut">Create a desktop icon for the reader</string>
	<string name="pdf_try">I want to try the browser......</string>
	<string name="pdf_app">The main body of this APP is a web browser, but it has not yet been completed. The completed function is the PDF reading/annotating part. </string>
	<string name="pdf_hint">Note: If you use the system file manager to call PolymPic to invoke the PDF document, you can use it without storage permission. </string>
	<string name="history">History</string>
	<string name="downloadWithSz">Download ( %s )</string>
	<string name="downloadingWithSz">Downloading （%s）</string>
	<string name="empty__" translatable="false" />
	<string name="sync_tabs">同步标签页</string>
	<string name="fetch_syn_info">获取同步信息中...</string>
	<string name="sync_dddot">同步...</string>
	<string name="ld_complete">下载完成</string>
	<string name="duoxuanmoshi">多选模式</string>
	<string name="houtaidakai">后台打开</string>
	<string name="xinbiaoqianyedaikai">新标签页打开…</string>
	<string name="sheweimorenye">设为默认页</string>
	<string name="fuzhilianjie">复制链接</string>
	<string name="fuzhiwenben">复制文本</string>
	<string name="xuanzewenben">选择文本</string>
	<string name="bianji">编辑</string>
	<string name="hangjianlianxuan">行间连选</string>
	<string name="foldAll">折叠全部</string>
	<string name="expAll">展开全部</string>
	<string name="showMultilineText">显示多行文本</string>
	<string name="allowDragSort">始终允许拖拽排序</string>
	<string name="dakaitupian">打开图片</string>
	<string name="xiazaitupian">下载图片</string>
	<string name="shitusousuo">识图搜索</string>
	<string name="tianjiadoahang">添加导航节点</string>
	<string name="fragment_history">历史记录</string>
	<string name="dakaifangshi">打开方式</string>
	<string name="daikaiwenjianjia">打开所在文件夹</string>
	<string name="downloads">下载</string>
	<string name="xinjianwenjianjia">新建文件夹</string>
	<string name="xinjiandaohangjiedian">新建导航节点</string>
	<string name="copy_title">复制标题</string>
	<string name="newtab_prev">在前方新建标签页</string>
	<string name="newtab_nxt">在后方新建标签页</string>
	<string name="locate_currtab">定位当前标签页</string>
	<string name="browse_prev">返回上一个</string>
	<string name="browser_nxt">浏览下一个</string>
	<string name="show_tabid">显示标签位置</string>
	<string name="show_close">显示关闭按钮</string>
	<string name="allow_lclk_sort">允许长按重排</string>
	<string name="unload_tab">卸载标签页</string>
	<string name="save_webstacks">保存浏览快照</string>
	<string name="web_screen_shot">网页长截图</string>
	<string name="save_thumb_as">缩略图另存为...</string>
	<string name="quanju">全局</string>
	<string name="biaoqianye">标签页</string>
	<string name="wangzhan">网站</string>
	<string name="genduo">更多...</string>
	<string name="ts_110">110%</string>
	<string name="ts_75">75%</string>
	<string name="ts_90">90%</string>
	<string name="ts_100">100%</string>
	<string name="ts_125">125%</string>
	<string name="ts_150">150%</string>
	<string name="pdf_viewer">PDF 阅读器</string>
	<string name="has_number_of_nodes">共计%d个节点，%d个文件夹</string>
</resources>