<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/tutorials"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="#aa000000"
	android:fitsSystemWindows="false"
	android:clickable="true"
	android:focusable="true"
	>
	<LinearLayout
		android:orientation="vertical"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:background="@drawable/popup_shadow_l"
		android:padding="10dp"
		android:layout_gravity="center"
		android:layout_marginBottom="25dp"
		>
		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:textSize="23sp"
			android:text="@string/pdf_app"
			android:padding="10dp"
			/>

		<View android:layout_width="match_parent" android:layout_height="1px" android:background="#000" />

		<androidx.appcompat.widget.AppCompatTextView
			android:id="@+id/tut_open_pdf_internal"
			android:autoSizeMinTextSize="10dp"
			android:autoSizeTextType="uniform"
			android:autoSizeMaxTextSize="25sp"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:textSize="22sp"
			android:text="@string/pdf_internal_open"
			android:singleLine="true"
			android:gravity="center"
			android:background="?attr/listChoiceBackgroundIndicator"
			android:padding="10dp"
			android:textColor="#000"
			android:drawableStart="@drawable/ic_folder_light_blue_700_24dp"
			/>

		<View android:layout_width="match_parent" android:layout_height="1px" android:background="#000" />

		<androidx.appcompat.widget.AppCompatTextView
			android:id="@+id/tut_open_pdf_system"
			android:autoSizeMinTextSize="10dp"
			android:autoSizeTextType="uniform"
			android:autoSizeMaxTextSize="22sp"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:textSize="23sp"
			android:text="@string/pdf_external_open"
			android:singleLine="true"
			android:gravity="center"
			android:background="?attr/listChoiceBackgroundIndicator"
			android:padding="10dp"
			android:textColor="#000"
			android:drawableStart="@drawable/ic_folder_light_blue_700_24dp"
			/>

		<View android:layout_width="match_parent" android:layout_height="1px" android:background="#000" />

		<androidx.appcompat.widget.AppCompatTextView
			android:id="@+id/tut_create_shortcut"
			android:autoSizeMinTextSize="10dp"
			android:autoSizeTextType="uniform"
			android:autoSizeMaxTextSize="25sp"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:textSize="22sp"
			android:text="@string/pdf_create_shortcut"
			android:gravity="center"
			android:background="?attr/listChoiceBackgroundIndicator"
			android:padding="10dp"
			android:textColor="#000"
			android:drawableStart="@drawable/ic_pdoc_house"
				android:drawableTint="#00f"
			/>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:orientation="horizontal"
			android:gravity="center"
			>
			<androidx.appcompat.widget.AppCompatTextView
				android:id="@+id/icon2"
				android:autoSizeMinTextSize="10dp"
				android:autoSizeTextType="uniform"
				android:autoSizeMaxTextSize="25sp"
				android:layout_width="0dp"
				android:layout_height="60dp"
				android:layout_weight="1"
				android:textSize="22sp"
				android:text="创建深色图标"
				android:gravity="center"
				android:background="?attr/listChoiceBackgroundIndicator"
				android:padding="10dp"
				android:textColor="#000"
				android:drawableStart="@drawable/ic_pdoc_house"
				android:drawableTint="#00f"
				/>
			<View android:layout_width="1px" android:layout_height="match_parent" android:background="#000" />
			<androidx.appcompat.widget.AppCompatTextView
				android:id="@+id/start"
				android:autoSizeMinTextSize="10dp"
				android:autoSizeTextType="uniform"
				android:autoSizeMaxTextSize="25sp"
				android:layout_width="0dp"
				android:layout_height="60dp"
				android:layout_weight="1"
				android:textSize="22sp"
				android:text="启动"
				android:gravity="center"
				android:background="?attr/listChoiceBackgroundIndicator"
				android:padding="10dp"
				android:textColor="#000"
				android:drawableStart="@drawable/ic_pdoc_house"
				android:drawableTint="#00f"
				/>
		</LinearLayout>

		<View android:layout_width="match_parent" android:layout_height="1px" android:background="#000" />


		<androidx.appcompat.widget.AppCompatTextView
			android:id="@+id/tut_continue"
			android:text="@string/pdf_try"
			android:autoSizeMinTextSize="10dp"
			android:autoSizeTextType="uniform"
			android:autoSizeMaxTextSize="25sp"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:textSize="23sp"
			android:gravity="center"
			android:background="?attr/listChoiceBackgroundIndicator"
			android:padding="10dp"
			android:shadowColor="#80333333"
			android:drawableStart="@drawable/polymer1"
			/>

	</LinearLayout>


	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:textColor="#000"
		android:text="@string/pdf_hint"
		android:background="@drawable/toast_background"
		android:padding="8dp"
		android:layout_gravity="center|bottom"
		android:layout_marginBottom="55dp"
		android:layout_marginStart="20dp"
		android:layout_marginEnd="20dp"
		/>
</FrameLayout>